[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Player/hpui.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/Player/SpriteSheet_Player.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/Coin.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/Player/Player_sprites.tres" type="SpriteFrames" id=5]
[ext_resource path="res://Assets/Sprites/Player/Dashframe2.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 17 )

[sub_resource type="Shader" id=7]
code = "shader_type canvas_item;

uniform float dir = 1.0;

void vertex(){
	VERTEX.x *= -1.0 * dir;
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 7 )
shader_param/dir = 1.0

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 0.572727 ), 0.0, 0.0, 0, 0, Vector2( 0.143678, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.281609, 0.970455 ), 0.0, 0.0, 0, 0, Vector2( 0.436782, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.614942, 0.972727 ), 0.0, 0.0, 0, 0, Vector2( 0.764368, 0.936364 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0, 0.483444, 1 )
colors = PoolColorArray( 0.117647, 0.117647, 0.117647, 0.180392, 0.117647, 0.117647, 0.117647, 0.537255, 0, 0, 0, 0.258824 )

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0, 0.675 ), 0.0, 0.0, 0, 0, Vector2( 0.217391, 0.993182 ), 0.0, 0.0, 0, 0, Vector2( 0.482609, 0.638636 ), 0.0, 0.0, 0, 0, Vector2( 0.756522, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.995652, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="RectangleShape2D" id=44]
extents = Vector2( 23, 9 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 3 )
region = Rect2( 230, 0, 46, 46 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 3 )
region = Rect2( 230, 46, 46, 46 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 3 )
region = Rect2( 230, 92, 46, 46 )

[sub_resource type="SpriteFrames" id=42]
animations = [ {
"frames": [ SubResource( 39 ), SubResource( 40 ), SubResource( 41 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="Gradient" id=43]
colors = PoolColorArray( 1, 0.788235, 0.054902, 1, 0.486328, 0.486328, 0.486328, 1 )

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
scale = Vector2( 2, 2 )
z_index = 1
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 6 )
shape = SubResource( 1 )

[node name="Invencible_Timer" type="Timer" parent="."]
wait_time = 1.3
one_shot = true

[node name="dashTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="Dash_sprites" type="CPUParticles2D" parent="."]
material = SubResource( 3 )
position = Vector2( 0, 4 )
emitting = false
amount = 48
lifetime = 0.8
local_coords = false
draw_order = 1
texture = ExtResource( 6 )
gravity = Vector2( 0, 30 )
scale_amount = 2.0
scale_amount_curve = SubResource( 4 )
color_ramp = SubResource( 5 )

[node name="Dash_Particles" type="CPUParticles2D" parent="Dash_sprites"]
emitting = false
amount = 200
lifetime = 1.2
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 8, 16 )
gravity = Vector2( 0, 30 )
angle = 360.0
angle_random = 1.0
scale_amount = 4.0
scale_amount_random = 1.0
scale_amount_curve = SubResource( 6 )
color = Color( 1, 0.843137, 0, 0.513726 )

[node name="Crouched" type="CollisionShape2D" parent="."]
position = Vector2( 0, 14 )
shape = SubResource( 44 )
disabled = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( -1, 1 )
frames = ExtResource( 5 )
animation = "Idle 0"
playing = true

[node name="Coin_pos" type="Position2D" parent="."]
position = Vector2( 16, 10.5 )

[node name="Sparkle" type="AnimatedSprite" parent="Coin_pos"]
visible = false
scale = Vector2( -0.4, 0.4 )
frames = SubResource( 42 )
frame = 1
playing = true

[node name="Pieces" type="CPUParticles2D" parent="Coin_pos"]
emitting = false
lifetime = 0.6
local_coords = false
spread = 180.0
gravity = Vector2( 0, 196 )
initial_velocity = 4.0
initial_velocity_random = 1.0
scale_amount = 4.0
color_ramp = SubResource( 43 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HP_UI" type="TextureRect" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0.717647 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = -112.0
margin_right = 173.0
margin_bottom = -25.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/HP_UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 5.5
margin_top = -19.5
margin_right = 45.5
margin_bottom = 47.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mega_pb" type="TextureProgress" parent="CanvasLayer"]
margin_left = 8.0
margin_top = 600.0
margin_right = 24.0
margin_bottom = 616.0
rect_scale = Vector2( 2, 2 )
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 4 )
fill_mode = 3
tint_under = Color( 0, 0, 0, 0.443137 )
tint_progress = Color( 1, 1, 1, 0.521569 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bullets" type="Node" parent="."]
[connection signal="timeout" from="Invencible_Timer" to="." method="_on_Invencible_timeout"]
[connection signal="timeout" from="dashTimer" to="." method="_on_dashTimer_timeout"]
